# ros2_nlpcobot

./: .gitignore  requirements.txt
src/nlpcobot/: README.md
src/nlpcobot/nlpcobot_bringup/: CMakeLists.txt  package.xml
src/nlpcobot/nlpcobot_bringup/launch/: cobot.launch.py  gazebo.launch.py  gazebo_empty.launch.py  launch.py  move_group_interface.launch.py  test.launch.py
src/nlpcobot/nlpcobot_cpp_py/: package.xml
src/nlpcobot/nlpcobot_cpp_py/nlpcobot_cpp_py/: detect_object.py  tf_camera_to_world.py
src/nlpcobot/nlpcobot_cpp_py/scripts/: detect_object_node.py  image_publisher_node.py  image_service_node.py  nlpcobot_node.py  parse_command_node.py  speech_to_text_node.py
src/nlpcobot/nlpcobot_cpp_py/src/: move_group_interface_node.cpp
src/nlpcobot/nlpcobot_description/: CMakeLists.txt
src/nlpcobot/nlpcobot_description/urdf/: tm5-700.urdf
src/nlpcobot/nlpcobot_gazebo/: CMakeLists.txt  package.xml
src/nlpcobot/nlpcobot_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/nlpcobot/nlpcobot_gazebo/worlds/: camera.sdf  shapes.sdf  world_joint_reference.sdf
src/nlpcobot/nlpcobot_interfaces/: CMakeLists.txt
src/nlpcobot/nlpcobot_interfaces/srv/: DetectObject.srv  ParseCommand.srv
src/nlpcobot_bringup/: CMakeLists.txt  package.xml
src/nlpcobot_bringup/config/: manipulator_bridge.yaml
src/nlpcobot_bringup/launch/: cobot.launch.py  gazebo.launch.py  gz.launch.py  gz_sim.launch.py  launch.py  motion_planning.launch.py
src/nlpcobot_cpp_py/: CMakeLists.txt  package.xml
src/nlpcobot_cpp_py/nlpcobot_cpp_py/: _template.py  image_conversion.py  parse_command.py  tf_camera_to_world.py
src/nlpcobot_cpp_py/scripts/: detect_object_node.py  image_publisher_node.py  langchain_sample.py  nlpcobot_node.py  parse_command_node.py  py_node.py  speech_to_text.py  speech_to_text_node.py
src/nlpcobot_cpp_py/src/: _template_node.cpp  cobot_commander.cpp  cobot_commander_node.cpp  cpp_node.cpp  move_group_interface_node.cpp  this_one_works.cpp
src/nlpcobot_description/: CMakeLists.txt  package.xml
src/nlpcobot_description/launch/: spawner.launch.py
src/nlpcobot_description/urdf/: camera.xacro
src/nlpcobot_description/world/: building_robot.sdf
src/nlpcobot_interfaces/: CMakeLists.txt  package.xml
src/nlpcobot_interfaces/action/: MoveRobot.action
src/nlpcobot_interfaces/srv/: CaptureImage.srv
src/ros2gpt_interfaces/: CMakeLists.txt  package.xml
src/ros2gpt_interfaces/srv/: TranscribeAudio.srv
src/ros2gpt_launch/: CMakeLists.txt  package.xml
src/ros2gpt_launch/launch/: launch.py
src/ros2gpt_main/: CMakeLists.txt  package.xml
src/ros2gpt_main/.hidden/: setup.cfg  setup.py
src/ros2gpt_main/ros2gpt_main/: movegroup_client.py  whisper_client_node.py
src/ros2gpt_main/scripts/: commander_node.py  openvla_test.py  realtimestt_node.py  ros2gpt_node.py  tm_move_client.py  whisper_server_node.py  whisper_test.py
src/ros2gpt_main/src/: moveit_planner.cpp
src/tmr_ros2-humble/custom_package/: package.xml
src/tmr_ros2-humble/techman_robot_get_status/: setup.py
src/tmr_ros2-humble/tm_description/: package.xml
src/tmr_ros2-humble/tm_driver/: package.xml
src/tmr_ros2-humble/tm_driver/src/: tm_ros2_svr.cpp
src/tmr_ros2-humble/tm_mod_urdf/: setup.py
src/tmr_ros2-humble/tm_moveit/tm12_moveit_config/launch/: tm12_run_move_group.launch.py
src/tmr_ros2-humble/tm_moveit/tm12x_moveit_config/launch/: tm12x_run_move_group.launch.py
src/tmr_ros2-humble/tm_moveit/tm14_moveit_config/launch/: tm14_run_move_group.launch.py
src/tmr_ros2-humble/tm_moveit/tm14x_moveit_config/launch/: tm14x_run_move_group.launch.py
src/tmr_ros2-humble/tm_moveit/tm5-700_moveit_config/launch/: tm5-700_run_move_group.launch.py
src/tmr_ros2-humble/tm_moveit/tm5-900_moveit_config/launch/: tm5-900_run_move_group.launch.py
src/tmr_ros2-humble/tm_moveit/tm5x-700_moveit_config/launch/: tm5x-700_run_move_group.launch.py
src/tmr_ros2-humble/tm_moveit/tm5x-900_moveit_config/launch/: tm5x-900_run_move_group.launch.py
