<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nlpcobot_description</name>
  <version>0.0.0</version>
  <description>Launch configuration for the NLPCobot system</description>
  <maintainer email="2102088@sit.singaporetech.edu.sg">yongp</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Local Dependencies -->
  <depend>nlpcobot_cpp_py</depend>

  <!-- Visualization Dependencies -->
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <!-- External Packages Dependencies -->
  <depend>tm5-700_moveit_config</depend>
  <depend>realsense2_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
