<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2gpt_launch</name>
  <version>0.0.0</version>
  <description>Launch configuration for the ROS2GPT system</description>
  <maintainer email="2102088@sit.singaporetech.edu.sg">yongp</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2gpt_main</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
